Compressing initial data
